--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,24 @@
 			<artifactId>xalan</artifactId>
 			<version>2.7.1</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+        <groupId>org.jsondoc</groupId>
+        <artifactId>spring-boot-starter-jsondoc</artifactId>
+        <version>1.2.10</version>
+</dependency>
+
+<dependency>
+        <groupId>org.jsondoc</groupId>
+        <artifactId>jsondoc-ui-webjar</artifactId>
+        <version>1.2.10</version>
+</dependency>
+
+
+		
+</dependencies>
+	
+
+    
 	
 	<build>
 		<plugins>
