--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.jpa.hibernate.ddl-auto = update
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+# mandatory configuration
+jsondoc.version=1.0
+jsondoc.basePath=http://localhost:1111/documentation
+jsondoc.packages[0]=rh.controllers
+# optional configuration
+jsondoc.playgroundEnabled=true
+jsondoc.displayMethodAs=URI
