L’intégration de l’authentification permet d’effectuer de changements au niveau de la gestion. Ainsi, nous n’afficherons par exemple, que les informations associés à l’utilisateur connecté. De ce fait , il nous faut modifier les service  pour modifier et intégrer de nouvelles fonctions. Version avant modif

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ jsondoc.packages[0]=rh.controllers
 # optional configuration
 jsondoc.playgroundEnabled=true
 jsondoc.displayMethodAs=URI
+#security
+#security.user.name=admin
+#security.user.password=123
